# eikonal_equation_solver

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  eikonal_equation.c  eikonal_equation.h  fsm.c  fsm.h  graph.c  graph.h  main.c  ndvector.c  ndvector.h  sintet.py  sintet_all_one.py  test  triangle.h
test/: CMakeLists.txt  out.log1  run_tests.c  test_eikonal_equation.c  test_fsm.c  test_graph.c  test_ndvector.c  test_nvector.c  test_triangle.c
